<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_corners">

    <TextView
        android:id="@+id/playlistsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/newPlaylist"/>

    <LinearLayout
        android:id="@+id/newPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_below="@id/playlistsHeader">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/playlistName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPlaylistName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:hint="@string/playlistDescription">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPlaylistDescription"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/cancelNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPlaylist"
        android:background="@drawable/search_corners"
        android:backgroundTint="@android:color/transparent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginBottom="10dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:textColor="@color/white"
        android:text="@android:string/cancel"/>

    <Button
        android:id="@+id/createNewPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/newPlaylist"
        android:background="@drawable/search_corners"
        android:backgroundTint="@android:color/transparent"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginBottom="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:text="@string/createPlaylist"/>

</RelativeLayout>