<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_corners">

    <RelativeLayout
        android:id="@+id/mediaDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/mediaArtHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/transparent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="0dp">

            <ImageView
                android:id="@+id/mediaArt"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"/>

        </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@id/mediaArtHolder"
            android:layout_toStartOf="@+id/go"
            android:layout_centerInParent="true"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/mediaName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/mediaName"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/mediaArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/mediaArtist"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/mediaType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="13sp"
                android:textColor="@color/white"
                android:text="@string/mediaType"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/go"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:tint="#AAA"
            android:src="@drawable/ic_go_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#999"/>

    <RelativeLayout
        android:id="@+id/mediaDelete"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <TextView
            android:id="@+id/mediaDeleteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/deleteFromLibrary"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorAccent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_delete"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#999"/>

    <RelativeLayout
        android:id="@+id/mediaPlaylist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/addToPlaylist"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorAccent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_playlist_add"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#999"/>

    <RelativeLayout
        android:id="@+id/mediaPlayNext"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/playNext"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorAccent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_play_next"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#999"/>

    <RelativeLayout
        android:id="@+id/mediaPlayLast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/playLast"/>

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:tint="@color/colorAccent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_play_last"/>

    </RelativeLayout>



</LinearLayout>