<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_corners">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mediaDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height=".5dp"
        android:background="#999"
        app:layout_constraintBottom_toBottomOf="@id/mediaDetails"
        app:layout_constraintStart_toStartOf="@id/mediaDetails"
        app:layout_constraintEnd_toEndOf="@id/mediaDetails"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaDelete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/mediaDetails"
        app:layout_constraintBottom_toTopOf="@id/mediaPlaylist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height=".5dp"
        android:background="#999"
        app:layout_constraintBottom_toBottomOf="@id/mediaDelete"
        app:layout_constraintStart_toStartOf="@id/mediaDelete"
        app:layout_constraintEnd_toEndOf="@id/mediaDelete"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaPlaylist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/mediaDelete"
        app:layout_constraintBottom_toTopOf="@id/mediaPlayNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height=".5dp"
        android:background="#999"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlaylist"
        app:layout_constraintStart_toStartOf="@id/mediaPlaylist"
        app:layout_constraintEnd_toEndOf="@id/mediaPlaylist"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaPlayNext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/mediaPlaylist"
        app:layout_constraintBottom_toTopOf="@id/mediaPlayLast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="0dp"
        android:layout_height=".5dp"
        android:background="#999"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlayNext"
        app:layout_constraintStart_toStartOf="@id/mediaPlayNext"
        app:layout_constraintEnd_toEndOf="@id/mediaPlayNext"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mediaPlayLast"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintVertical_weight="1"
        app:layout_constraintTop_toBottomOf="@id/mediaPlayNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/mediaArtHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@id/mediaDetails"
        app:layout_constraintBottom_toBottomOf="@id/mediaDetails"
        app:layout_constraintStart_toStartOf="@id/mediaDetails">

        <ImageView
            android:id="@+id/mediaArt"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/mediaName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/mediaName"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="@id/mediaArtHolder"
        app:layout_constraintStart_toEndOf="@id/mediaArtHolder"
        app:layout_constraintEnd_toEndOf="@id/mediaDetails"/>

    <TextView
        android:id="@+id/mediaArtist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/mediaArtist"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/mediaName"
        app:layout_constraintStart_toEndOf="@id/mediaArtHolder"
        app:layout_constraintEnd_toEndOf="@id/mediaDetails"/>

    <TextView
        android:id="@+id/mediaType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textSize="13sp"
        android:textColor="@color/white"
        android:text="@string/mediaType"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/mediaArtist"
        app:layout_constraintStart_toEndOf="@id/mediaArtHolder"
        app:layout_constraintEnd_toEndOf="@id/mediaDetails"/>

    <TextView
        android:id="@+id/mediaDeleteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/deleteFromLibrary"
        app:layout_constraintTop_toTopOf="@id/mediaDelete"
        app:layout_constraintBottom_toBottomOf="@id/mediaDelete"
        app:layout_constraintStart_toStartOf="@id/mediaDelete"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:tint="@color/colorAccent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_delete"
        app:layout_constraintTop_toTopOf="@id/mediaDelete"
        app:layout_constraintBottom_toBottomOf="@id/mediaDelete"
        app:layout_constraintEnd_toEndOf="@id/mediaDelete"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/addToPlaylist"
        app:layout_constraintTop_toTopOf="@id/mediaPlaylist"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlaylist"
        app:layout_constraintStart_toStartOf="@id/mediaPlaylist"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:tint="@color/colorAccent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_playlist_add"
        app:layout_constraintTop_toTopOf="@id/mediaPlaylist"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlaylist"
        app:layout_constraintEnd_toEndOf="@id/mediaPlaylist"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/playNext"
        app:layout_constraintTop_toTopOf="@id/mediaPlayNext"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlayNext"
        app:layout_constraintStart_toStartOf="@id/mediaPlayNext"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:tint="@color/colorAccent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_play_next"
        app:layout_constraintTop_toTopOf="@id/mediaPlayNext"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlayNext"
        app:layout_constraintEnd_toEndOf="@id/mediaPlayNext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:text="@string/playLast"
        app:layout_constraintTop_toTopOf="@id/mediaPlayLast"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlayLast"
        app:layout_constraintStart_toStartOf="@id/mediaPlayLast"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:tint="@color/colorAccent"
        android:scaleType="fitXY"
        android:src="@drawable/ic_play_last"
        app:layout_constraintTop_toTopOf="@id/mediaPlayLast"
        app:layout_constraintBottom_toBottomOf="@id/mediaPlayLast"
        app:layout_constraintEnd_toEndOf="@id/mediaPlayLast"/>

</androidx.constraintlayout.widget.ConstraintLayout>