<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:background="@drawable/dialog_corners">

    <RelativeLayout
        android:id="@+id/goToArtist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@+id/goArtist"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/gotoArtist"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/mediaArtist"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/goArtist"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:tint="#AAA"
            android:src="@drawable/ic_go_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="#999"/>

    <RelativeLayout
        android:id="@+id/goToAlbum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toStartOf="@+id/goAlbum"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/gotoAlbum"
                android:maxLines="2"
                android:ellipsize="end"/>

            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:text="@string/mediaArtist"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/goAlbum"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:tint="#AAA"
            android:src="@drawable/ic_go_arrow"/>

    </RelativeLayout>

</LinearLayout>